# pheet

./: .bzrignore  .cproject  .gitignore  .project  CMakeLists.txt  GNUmakefile  Makefile  csvheet  performance_settings.h  runtime_test  settings.h  settings.mk  sim_to_csv  test_settings.h
examples/quicksort/: CMakeLists.txt  parallel.cpp  sequential.cpp
test/: CMakeLists.txt  Test.cpp  Test.h  Tests.h  init.h  pheet_tests.cpp  settings.h  sub.mk  test_settings.h
test/count_bench/: CMakeLists.txt  CountBench.h  main.cpp  sub.mk
test/graph_bipartitioning/: CMakeLists.txt  FastBitset.h  GraphBipartitioningTest.h  GraphBipartitioningTests.cpp  GraphBipartitioningTests.h  graph_helpers.h  main.cpp  sub.mk
test/graph_bipartitioning/Basic/: BBGraphBipartitioning.h  BBGraphBipartitioningFREELogic.h  BBGraphBipartitioningLogic.h  BBGraphBipartitioningSubproblem.h
test/graph_bipartitioning/BranchBound/: BasicLowerBound.cpp  BasicLowerBound.h  BasicNextVertex.cpp  BasicNextVertex.h  BranchBoundGraphBipartitioning.h  BranchBoundGraphBipartitioningPerformanceCounters.h  BranchBoundGraphBipartitioningRootTask.h  BranchBoundGraphBipartitioningTask.h  sub.mk
test/graph_bipartitioning/ImprovedBranchBound/: ImprovedBranchBoundGraphBipartitioning.h  ImprovedBranchBoundGraphBipartitioningBasicLogic.h  ImprovedBranchBoundGraphBipartitioningDeltaContribNVFREELogic.h  ImprovedBranchBoundGraphBipartitioningDeltaContribNVLogic.h  ImprovedBranchBoundGraphBipartitioningDeltaLogic.h  ImprovedBranchBoundGraphBipartitioningDeltaNVLogic.h  ImprovedBranchBoundGraphBipartitioningImprovedLogic.h  ImprovedBranchBoundGraphBipartitioningPerformanceCounters.h  ImprovedBranchBoundGraphBipartitioningSubproblem.h  ImprovedBranchBoundGraphBipartitioningSubproblemPerformanceCounters.h  ImprovedBranchBoundGraphBipartitioningTask.h
test/graph_bipartitioning/ImprovedStrategyBranchBound/: ImprovedStrategyBranchBoundGraphBipartitioning.h  ImprovedStrategyBranchBoundGraphBipartitioningAutoStrategy.h  ImprovedStrategyBranchBoundGraphBipartitioningBestFirstStrategy.h  ImprovedStrategyBranchBoundGraphBipartitioningDepthFirstBestStrategy.h  ImprovedStrategyBranchBoundGraphBipartitioningDepthFirstStrategy.h  ImprovedStrategyBranchBoundGraphBipartitioningDynamicStrategy.h  ImprovedStrategyBranchBoundGraphBipartitioningLowerBoundStrategy.h  ImprovedStrategyBranchBoundGraphBipartitioningPerformanceCounters.h  ImprovedStrategyBranchBoundGraphBipartitioningRootTask.h  ImprovedStrategyBranchBoundGraphBipartitioningTask.h  ImprovedStrategyBranchBoundGraphBipartitioningUpperBoundFifoStrategy.h  ImprovedStrategyBranchBoundGraphBipartitioningUpperBoundStrategy.h  ImprovedStrategyBranchBoundGraphBipartitioningUpperLowerBoundStrategy.h
test/graph_bipartitioning/PPoPP/: PPoPPBBGraphBipartitioning.h  PPoPPBBGraphBipartitioningEstimateStrategy.h
test/graph_bipartitioning/PPoPPImprovedStrategyBranchBound/: PPoPPImprovedStrategyBranchBoundGraphBipartitioning.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningAutoStrategy.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningBestFirstStrategy.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningDepthFirstBestStrategy.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningDepthFirstStrategy.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningDynamicStrategy.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningEstimateStrategy.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningLowerBoundStrategy.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningPerformanceCounters.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningTask.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningUpperBoundFifoStrategy.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningUpperBoundStrategy.h  PPoPPImprovedStrategyBranchBoundGraphBipartitioningUpperLowerBoundStrategy.h
test/graph_bipartitioning/Strategy/: StrategyBBGraphBipartitioning.h
test/graph_bipartitioning/StrategyBranchBound/: BranchBoundGraphBipartitioningAutoStrategy.h  BranchBoundGraphBipartitioningBestFirstStrategy.h  StrategyBranchBoundGraphBipartitioning.h  StrategyBranchBoundGraphBipartitioningPerformanceCounters.h  StrategyBranchBoundGraphBipartitioningRootTask.h  StrategyBranchBoundGraphBipartitioningTask.h
test/graph_bipartitioning_and_lupiv/: GraphBiAndLupivTests.cpp  GraphBiAndLupivTests.h
test/inarow/: CMakeLists.txt  InARowTest.h  InARowTests.cpp  InARowTests.h  main.cpp  sub.mk
test/inarow/RecursiveSearch/: InARowGame.h  InARowGameTask.h  InARowTask.h
test/lupiv/: CMakeLists.txt  LUPivTest.h  LUPivTests.cpp  LUPivTests.h  main.cpp  sub.mk
test/lupiv/LocalityStrategy/: LUPivLocalityStrategy.h  LocalityStrategyLUPiv.h  LocalityStrategyLUPivCriticalPathTask.h  LocalityStrategyLUPivMMTask.h  LocalityStrategyLUPivPivotTask.h  LocalityStrategyLUPivRootTask.h  LocalityStrategyLUPivStandardPathTask.h
test/lupiv/PPoPPLocalityStrategy/: PPoPPLUPivLocalityStrategy.h  PPoPPLUPivPerformanceCounters.h  PPoPPLocalityStrategyLUPiv.h  PPoPPLocalityStrategyLUPivMMTask.h  (+3 more)
test/msp/: CMakeLists.txt  MspPerformanceCounters.h  MspTest.h  MspTests.cpp  MspTests.h  Util.cpp  Util.h  main.cpp  sub.mk
test/n-queens/: CMakeLists.txt  NQueensTest.h  NQueensTests.cpp  NQueensTests.h  main.cpp  sub.mk
test/prefix_sum/: CMakeLists.txt  PrefixSumTest.h  PrefixSumTests.cpp  PrefixSumTests.h  main.cpp  sub.mk
test/set_bench/: CMakeLists.txt  SetBench.cpp  main.cpp  sub.mk
test/sor/: CMakeLists.txt  SORTest.h  SORTests.cpp  SORTests.h  main.cpp  sub.mk
test/sorting/: CMakeLists.txt  SortingTest.h  SortingTests.cpp  SortingTests.h  main.cpp  sub.mk
test/sssp/: CMakeLists.txt  SsspTest.h  SsspTests.cpp  SsspTests.h  main.cpp  sssp_graph_helpers.h  sub.mk
test/test_variants/: daniel.h  debug.h  fast.h  full.h  long_single.h  medium_single.h  mtaap2013.h  ppopp2013.h  ppopp2014.h  short_single.h  spaa2012.h  standard.h
test/tristrip/: CMakeLists.txt  GraphDual.h  TriStripTest.h  TriStripTests.cpp  TriStripTests.h  main.cpp  sub.mk
test/uts/: CMakeLists.txt  UTSImp.cpp  UTSTest.h  UTSTests.cpp  UTSTests.h  main.cpp  sub.mk
(+632 files in other folders)
