add_subdirectory(count_bench)
add_subdirectory(graph_bipartitioning)
add_subdirectory(inarow)
add_subdirectory(lupiv)
add_subdirectory(msp)
add_subdirectory(n-queens)
add_subdirectory(prefix_sum)
add_subdirectory(set_bench)
add_subdirectory(sor)
add_subdirectory(sorting)
add_subdirectory(sssp)
add_subdirectory(tristrip)
add_subdirectory(uts)
