add_subdirectory(count_bench)
add_subdirectory(graph_bipartitioning)
add_subdirectory(inarow)
add_subdirectory(lupiv)
add_subdirectory(msp)
# add_subdirectory(n-queens) Currently broken.
add_subdirectory(prefix_sum)
add_subdirectory(set_bench)
# add_subdirectory(sor) Needs additional configuration.
add_subdirectory(sorting)
add_subdirectory(sssp)
# add_subdirectory(tristrip) Needs additional configuration.
# add_subdirectory(uts) Needs additional configuration
add_subdirectory(util)
